--- a/config/assets.yml
+++ b/config/assets.yml
@@ -1,6 +1,7 @@
 embed_assets: off
 gzip_assets: off
-css_compressor: 'sass'
+css_compressor_options:
+  line_break: 0
 
 # if you want use IE in dev mode and want to get around the max of 30 stylesheets
 # problem, uncomment the following lines and make sure you
@@ -15,13 +16,18 @@ css_compressor: 'sass'
 javascripts:
 
 stylesheets:
-  content_migrations: 
-    - public/stylesheets/compiled/content_migrations.css
   common:
+    - public/stylesheets/compiled/g_reset.css
     - public/stylesheets/compiled/g_base.css
-    - public/stylesheets/static/mediaelementplayer.css
     - public/stylesheets/compiled/g_instructure.css
+    - public/stylesheets/compiled/ellipsis.css
+    - public/stylesheets/compiled/g_util_misc.css
+    - public/stylesheets/compiled/g_util_fancy_links.css
+    - public/stylesheets/compiled/g_util_inst_tree.css
+    - public/stylesheets/compiled/g_util_chevron_crumbs.css
+    - public/stylesheets/compiled/g_util_ui_listview.css
     - public/stylesheets/compiled/g_assignments.css
+    - public/stylesheets/compiled/g_content_imports.css
     - public/stylesheets/compiled/g_context_inbox.css
     - public/stylesheets/compiled/g_groups.css
     - public/stylesheets/compiled/g_media_comments.css
@@ -36,8 +42,11 @@ stylesheets:
     - public/stylesheets/compiled/g_mini_calendar.css
     - public/stylesheets/compiled/helpDialog.css
     - public/stylesheets/compiled/print.css
-  context_modules: 
-    - public/stylesheets/compiled/context_modules.css
+  collection_item_save:
+    - public/stylesheets/compiled/collection_item_save.css
+  collections_app:
+    - public/stylesheets/compiled/views/KollectionItems/ShowView.css
+    - public/stylesheets/compiled/views/CommentsView.css
   dashboard:
     - public/stylesheets/compiled/dashboard_messages.css
     - public/stylesheets/compiled/dashboard_activity.css
@@ -54,8 +63,6 @@ stylesheets:
   speed_grader:
     - public/stylesheets/compiled/ui.selectmenu.css
     - public/stylesheets/compiled/speed_grader.css
-  conferences:
-    - public/stylesheets/compiled/conferences.css
   plugins:
     - public/stylesheets/compiled/plugins.css
   gradebook_uploads:
@@ -65,10 +72,10 @@ stylesheets:
     - public/stylesheets/static/calendar.css
   calendar2:
     - public/stylesheets/compiled/fullcalendar.css
+    - public/stylesheets/compiled/Calendar.css
     - public/stylesheets/compiled/mini_calendar.css
     - public/stylesheets/compiled/calendar/sidebar.css
     - public/stylesheets/compiled/calendar/scheduler.css
-    - public/stylesheets/compiled/calendar/calendarHeader.css
   course_settings:
     - public/stylesheets/compiled/course_settings.css
     - public/stylesheets/compiled/external_tools.css
@@ -76,8 +83,6 @@ stylesheets:
   discussions:
     - public/stylesheets/compiled/ui.selectmenu.css
     - public/stylesheets/compiled/discussions.css
-  discussions_list:
-    - public/stylesheets/compiled/discussions_list.css
   full_files:
     - public/stylesheets/compiled/full_files.css
   datagrid:
@@ -89,27 +94,28 @@ stylesheets:
     - public/stylesheets/compiled/message_students.css
   gradebook2:
     - public/stylesheets/compiled/message_students.css
+    - public/stylesheets/compiled/submissionDetailsDialog.css
+    - public/stylesheets/compiled/AssignmentDetailsDialog.css
     - public/stylesheets/compiled/gradebook2.css
+    - public/stylesheets/compiled/assignment_group_weights_dialog.css
   attendance:
     - public/stylesheets/compiled/attendance.css
   quizzes:
     - public/stylesheets/compiled/quizzes.css
-    - public/stylesheets/compiled/quizzes-mobile.css
     - public/stylesheets/compiled/message_students.css
     - public/stylesheets/compiled/ui.selectmenu.css
   moderate_quiz:
     - public/stylesheets/compiled/moderate_quiz.css
-  assignments:
-    - public/stylesheets/compiled/assignments.css
+  full_assignment:
+    - public/stylesheets/compiled/full_assignment.css
     - public/stylesheets/compiled/grading_standards.css
     - public/stylesheets/static/embed_content.css
-  teacher_assignments:
-    - public/stylesheets/compiled/teacher_assignments.css
   grading_standards:
     - public/stylesheets/compiled/grading_standards.css
   login:
     - public/stylesheets/compiled/login.css
   roster:
+    - public/stylesheets/compiled/course_settings.css
     - public/stylesheets/compiled/roster.css
   roster_user:
     - public/stylesheets/compiled/roster_user.css
@@ -123,6 +129,9 @@ stylesheets:
     - public/stylesheets/compiled/page_views.css
   prior_users:
     - public/stylesheets/compiled/prior_users.css
+  popup:
+    - public/stylesheets/compiled/g_reset.css
+    - public/stylesheets/compiled/popup/main.css
   reports:
     - public/stylesheets/compiled/reports.css
   statistics:
@@ -138,16 +147,11 @@ stylesheets:
   account_settings:
     - public/stylesheets/compiled/account_settings.css
     - public/stylesheets/compiled/external_tools.css
-  account_admin_tools:
-    - public/stylesheets/compiled/account_admin_tools.css
   select_content_dialog:
     - public/stylesheets/compiled/select_content_dialog.css
   conversations:
     - public/stylesheets/compiled/conversations.css
     - public/stylesheets/compiled/slideshow.css
-  conversations_new:
-    - public/stylesheets/compiled/conversations_new.css
-    - public/stylesheets/compiled/compose_message_dialog.css
   alerts:
     - public/stylesheets/compiled/alerts.css
   developer_keys:
@@ -162,18 +166,4 @@ stylesheets:
     - public/javascripts/tinymce/jscripts/tiny_mce/plugins/inlinepopups/skins/clearlooks2/window.css
   messages:
     - public/stylesheets/compiled/messages.css
-  content_imports:
-    - public/stylesheets/compiled/content_imports.css
-  user_notes:
-    - public/stylesheets/compiled/user_notes.css
-  imports:
-    - public/stylesheets/compiled/imports.css
-  styleguide:
-    - public/stylesheets/compiled/styleguide.css
-    - public/stylesheets/compiled/syntax.css
-  locale:
-    - public/stylesheets/compiled/locale.css
-  mobile_auth:
-    - public/stylesheets/compiled/mobile_auth.css
-
   <%= plugin_assets.anchors_yml %>
